New Style, Sub Pages, Fixed Type

--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,60 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "Inter Extra Bold"; /* Choose a name for your font */
-  src: url("fonts/web/Inter-ExtraBold.woff2") format("woff2");
-  font-weight: normal;
-  font-style: normal;
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 body {
-  font-family: "Inter Extra Bold", sans-serif;
+  background-color: #011009;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.animated-gradient {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(45deg, #2ad775, #34c576, #5affa2);
+  background-size: 300% 300%;
+  animation: gradientAnimation 10s ease infinite;
+}
+
+.body-solid-background {
+  background-color: #011009;
+  margin: 20px 20px 0 20px;
+  border-radius: 10px 10px 0 0;
+}
+
+.plus-jakarta-sans-bold {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.plus-jakarta-sans-normal {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.plus-jakarta-sans-light {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .logo {
@@ -21,22 +66,29 @@ body {
 }
 
 header {
-  background-color: #fff;
-  padding: 25px 60px;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
+  flex: none;
+  height: auto;
+  left: 50%;
+  position: fixed;
+  top: 12px;
+  transform: translate(-50%);
+  width: auto;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
   -webkit-box-shadow: 0px 2px 10px -4px rgba(44, 54, 49, 0.75);
   -moz-box-shadow: 0px 2px 10px -4px rgba(44, 54, 49, 0.75);
   box-shadow: 0px 2px 10px -4px rgba(44, 54, 49, 0.75);
+  border-radius: 10px;
 }
 
 .header-container {
+  width: 750px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 20px 30px;
 }
 
 .header-logo img {
@@ -55,34 +107,55 @@ header {
 }
 
 .header-nav a {
-  color: #2c3631;
-  text-decoration: none;
   transition: color 0.3s;
+  font-size: 14px;
+  color: #5affa2;
 }
 
 .header-nav a:hover {
-  color: #5affa2;
+  color: #ffffff;
 }
 
 .hero {
   height: 80vh;
   display: flex;
+  gap: 30px;
+  align-items: center;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 75px;
+  padding: 125px 75px 75px 75px;
+  text-align: center;
 }
 
 .hero h1 {
-  font-size: 5.5rem;
-  line-height: 5.75rem;
+  color: #ffffff;
+  font-size: 4rem;
+  line-height: 4.75rem;
 }
 
 .hero h2 {
-  font-size: 2rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  max-width: 800px;
+  color: #adadad;
 }
 
-.interExtraBold {
-  font-family: "Inter Extra Bold", sans-serif;
+.book-button {
+  display: inline-block;
+  padding: 12px 20px;
+  background-color: #011009; /* Primary color */
+  color: #2ad775;
+  border: 1px solid #2ad775;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.book-button:hover {
+  background-color: #2ad775; /* Primary color */
+  color: #011009;
 }
 
 .trackingTight {
@@ -95,13 +168,13 @@ header {
 
 /* Text / Primary Colors */
 .colorPrimary {
-  color: #5affa2;
+  color: #2ad775;
 }
 .colorPrimaryAlt {
-  color: #4ce591;
+  color: #34c576;
 }
 .colorSecondary {
-  color: #2c3631;
+  color: #011009;
 }
 .colorWhite {
   color: #fff;
@@ -112,15 +185,15 @@ header {
   background-color: #5affa2;
 }
 .bgSecondary {
-  background-color: #2c3631;
+  background-color: #011009;
 }
+
 .bgWhite {
   background-color: #fff;
 }
 
 /* FOOTER */
 footer {
-  background-color: #2c3631;
   color: #fff;
   padding: 20px;
   font-size: 14px;
